Added publisher controller and functionalities, added endpoints, and configure swagger.json
